fixed sizes for columns, made it nowrap

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,6 @@
   
 }
 
+.row {
+  flex-wrap: nowrap !important;  
+}
