--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -3,7 +3,7 @@
     top: 0;
     bottom: 0;
     left: 0;
-    min-height: 100vh !important;
+    min-height: 99.6vh !important;
     z-index: 100;
     padding:0 0 0;
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
@@ -22,7 +22,7 @@
     flex: 1;
 }
 #sidebar-wrapper{
-    min-height: 100vh !important;
+    min-height: 99.6vh !important;
     width: 100vw;
     margin-left: -1rem;
     -webkit-transition: margin .25s ease-out;
